@@ -1,16 +1,16 @@
 buildscript {
-    ext.kotlin_version = '0.1-SNAPSHOT'
+    project.ext.kotlinVersion = "0.7.270"
+
+    version = "0.1-SNAPSHOT"
+
     repositories {
         mavenCentral()
         maven {
             url 'http://oss.sonatype.org/content/repositories/snapshots'
         }
-        maven {
-            url 'http://oss.sonatype.org/content/repositories/snapshots'
-        }
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$ext.kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$ext.kotlinVersion"
         classpath "io.netty:netty-all:4.0.15.Final"
         classpath "com.netflix.rxjava:rxjava-core:0.16.1"
         classpath "com.netflix.rxjava:rxjava-kotlin:0.16.1"
@@ -21,6 +21,8 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 repositories {
     mavenCentral()
@@ -29,16 +31,67 @@ repositories {
     }
 }
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = "org.easyhttp"
+            artifactId = "easyhttp"
+            version = "${version}"
+
+            from components.java
+        }
+    }
+
+
+    repositories {
+        maven {
+            url "http://repository.jetbrains.com/easyhttp"
+            if (rootProject.hasProperty("deploy_username") && rootProject.hasProperty("deploy_password")) {
+                credentials {
+                    username "${rootProject.deploy_username}"
+                    password "${rootProject.deploy_password}"
+                }
+            }
+        }
+    }
+
+}
+
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$ext.kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$ext.kotlinVersion"
     compile "io.netty:netty-all:4.0.15.Final"
-    compile "com.netflix.rxjava:rxjava-core:0.16.1"
-    compile "com.netflix.rxjava:rxjava-kotlin:0.16.1"
     compile "joda-time:joda-time:2.3"
     compile "com.google.code.gson:gson:2.2.4"
     testCompile "junit:junit:4.11"
 
 }
+
 sourceSets {
+    src {
+        main {
+            kotlin
+        }
+    }
+    test {
+        main {
+            kotlin
+        }
+    }
     main.java.srcDirs += 'src/main/kotlin'
+}
+
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.11'
+
+    doLast() {
+        def gradleOpts = "-XX:MaxPermSize=300m -Xmx1024m"
+        def gradlew_sh = file("gradlew")
+        def gradlew_bat = file("gradlew.bat")
+        gradlew_sh.text = gradlew_sh.text.replace("DEFAULT_JVM_OPTS=",
+                "GRADLE_OPTS=\"$gradleOpts \$GRADLE_OPTS\"\nDEFAULT_JVM_OPTS=")
+        gradlew_bat.text = gradlew_bat.text.replace("set DEFAULT_JVM_OPTS=",
+                "set GRADLE_OPTS=$gradleOpts %GRADLE_OPTS%\nset DEFAULT_JVM_OPTS=")
+
+    }
 }
